      entire log history. (Cheuksan Edward Wang #50793)

    * ``bzr cat`` can look up contents of removed or renamed files. If the
      pathname is ambiguous, i.e. the files in the old and new trees have
      different id's, the default is the file in the new tree. The user can
      use "--name-from-revision" to select the file in the old tree.
      (Cheuksan Edward Wang, #30190)

bzr 0.12  2006-10-30

  INTERNALS:

    * Clean up ``bzr selftest --benchmark bundle`` to correct an import,
      and remove benchmarks that take longer than 10min to run.
      (John Arbash Meinel)
  
bzr 0.12rc1  2006-10-23

  IMPROVEMENTS:

    * ``bzr log`` now shows dotted-decimal revision numbers for all revisions,
      rather than just showing a decimal revision number for revisions on the
      mainline. These revision numbers are not yet accepted as input into bzr
      commands such as log, diff etc. (Robert Collins)

    * revisions can now be specified using dotted-decimal revision numbers.
      For instance, ``bzr diff -r 1.2.1..1.2.3. (Robert Collins)

    * ``bzr help commands`` output is now shorter (Aaron Bentley)

    * New connection: ``bzr+http://`` which supports tunnelling the smart
      protocol over an HTTP connection. If writing is enabled on the bzr
      server, then you can write over the http connection.
      (Andrew Bennetts)

    * ``bzr`` now uses lazy importing to reduce the startup time. This has
      a moderate effect on lots of actions, especially ones that have
      little to do. For example ``bzr rocks`` time is down to 116ms from
      283ms. (John Arbash Meinel)

    * New Registry class to provide name-to-object registry-like support,
      for example for schemes where plugins can register new classes to
      do certain tasks (e.g. log formatters). Also provides lazy registration
      to allow modules to be loaded on request. (John Arbash Meinel, Adeodato
      Simó)

  API INCOMPATABILITY:
  