@@ -88,7 +88,7 @@ USER_DEFAULTS = [
     '*.o',
     '*.py[co]',
     '*.so',
-    '.*.sw[nop]',
+    '*.sw[nop]',
     '*~',
     '.#*',
     '[#]*#',
